--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "date-fns": "^2.23.0",
+    "firebase": "^8.9.0",
+    "firebase-tools": "^9.16.0",
     "react-date-range": "^1.3.0",
     "react-router-dom": "^5.2.0"
   }
